examples/test/testpolicy2047.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2047
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key22: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value37
      podSelector:
        matchLabels:
          key21: value49
          key31: value40
          key8: value46
